# FS2020SimConnectPlugin

./: CMakeLists.txt  LICENSE  README.md
src/: FS2020SimConnectPlugin.cpp  FS2020SimConnectPlugin.h  FS2020SimConnectPlugin.json  SimConnectAI.cpp  SimConnectAI.h  SimConnectAircraftHandle.cpp  SimConnectAircraftHandle.h  SimConnectAircraftInfo.cpp  SimConnectAircraftInfo.h  SimConnectEngineReply.cpp  SimConnectEngineReply.h  SimConnectEngineRequest.cpp  SimConnectEngineRequest.h  SimConnectFlightPlan.cpp  SimConnectFlightPlan.h  SimConnectLight.cpp  SimConnectLight.h  SimConnectPosition.cpp  SimConnectPosition.h  SimConnectPrimaryFlightControl.cpp  SimConnectPrimaryFlightControl.h  SimConnectSecondaryFlightControl.cpp  SimConnectSecondaryFlightControl.h  SimConnectSimulationTime.cpp  SkyConnectImpl.cpp  SkyConnectImpl.h
